# metriken

./: .gitignore  BUGFIX_PLAN.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  PLAN.md
.github/workflows/: cargo.yml
docs/: histogram-series-memory-optimization-plan.md  histogram-slice-api-plan.md  memory-optimization-report.md  structured-column-metadata.md
metriken/: Cargo.toml
metriken-core/: CHANGELOG.md  Cargo.toml
metriken-core/src/: dynmetrics.rs  lib.rs  metadata.rs  metrics.rs  null.rs  provide.rs  traits.rs  wrapper.rs
metriken-derive/: Cargo.toml
metriken-derive/src/: args.rs  metric.rs
metriken-exposition/: Cargo.toml
metriken-exposition/src/: convert.rs  lib.rs  parquet.rs  prometheus.rs  snapshot.rs  snapshotter.rs  util.rs
metriken-query/: Cargo.toml  queries.toml
metriken-query-fixtures/: Cargo.toml
metriken-query-fixtures/fixtures/: counter_basic.parquet  counter_multi_label.parquet  counter_near_overflow.parquet  counter_reset.parquet  gauge_basic.parquet  gauge_multi_source.parquet  gpu_basic.parquet  histogram_basic.parquet  histogram_empty_period.parquet  histogram_reset.parquet  rezolus_minimal.parquet  sampling_interval_500ms.parquet  softirq_multi_kind.parquet
metriken-query-fixtures/src/: lib.rs
metriken-query-sql/: CAUTION.md  Cargo.toml
metriken-query-sql/src/: backend.rs  interp.rs  lib.rs  macros.rs  udf.rs  views.rs  wide_form.rs
metriken-query-sql/tests/: lag_repro.rs
metriken-query/docs/: rezolus-query-backlog.md
metriken-query/docs/bench/: steady_state_full.md
metriken-query/examples/: asymmetric_errors.rs  bench_irate_udf.rs  cachecannon_mem.rs  check_ts_dups.rs  debug_wide.rs  enumerate_rezolus_queries.rs  inspect_histograms.rs  memory_compare.rs  parquet_summary.rs  probe_rate_diff.rs  shadow_replay.rs  steady_state_bench.rs  wide_form_coverage.rs
metriken-query/src/: dispatch.rs  lib.rs  template.rs
metriken-query/src/promql/: api.rs  mod.rs  tests.rs
metriken-query/src/promql/streaming/: aggregate.rs  binary.rs  deriv.rs  dispatch.rs  gauge.rs  histogram.rs  irate.rs  mod.rs  rate.rs  sum_by.rs  tests.rs
metriken-query/src/tsdb/: heatmap.rs  labels.rs  mod.rs
metriken-query/src/tsdb/collection/: counter.rs  gauge.rs  histogram.rs  mod.rs  untyped.rs
metriken-query/src/tsdb/series/: counter.rs  gauge.rs  histogram.rs  mod.rs  untyped.rs
metriken-query/tests/: dispatcher.rs  divergence_inspector.rs  frontend_coverage.rs  golden.rs
metriken-query/tests/data/: production_queries.txt
metriken-query/tests/golden/: counter_irate_basic.snap  counter_irate_by_g_with_labels_scaled_softirq_by_kind_div_1000.snap  counter_irate_by_g_with_labels_softirq_by_kind_id_eq_0.snap  counter_irate_by_id_generic_cpu_instructions.snap  counter_irate_by_id_scaled_cpu_usage_div_1e9.snap  counter_irate_by_id_with_labels_scaled_cpu_usage_user_div_1e9.snap  counter_irate_by_id_with_labels_softirq_kind_hi_5m.snap  counter_irate_ratio_with_labels_softirq_time_per_event_hi.snap  counter_irate_reset.snap  counter_irate_subtract_with_labels_softirq_minus_softirq_time_hi.snap  counter_irate_total_mul_softirq_hi_x8.snap  counter_irate_total_per_cpu_core_pct_cpu_usage_div_cores_div_1e9.snap  counter_irate_total_scaled_cpu_usage_div_1e9.snap  counter_irate_with_labels_per_cpu_core_pct_cpu_usage_user_div_cores_div_1e9.snap  counter_irate_with_labels_scaled_softirq_hi_div_1000.snap  counter_rate_bare_generic_requests.snap  counter_rate_reset.snap  counter_rate_sum_scaled_requests_div_1.snap  counter_ratio.snap  counter_ratio_by_g_with_labels_softirq_time_per_event_by_kind.snap  counter_ratio_by_id_complement_ipc_complement.snap  counter_ratio_by_id_generic_ipc.snap  counter_ratio_by_id_scaled_ipc_x1000.snap  counter_ratio_complement_bpf_complement.snap  counter_ratio_generic_bpf_avg_run_time_total.snap  counter_ratio_scaled_bpf_scaled.snap  counter_sum_by_id.snap  counter_sum_by_id_filtered.snap  counter_total_sum.snap  counter_total_sum_generic_cpu_usage.snap  gauge_a_over_a_plus_b_target_rate_cachecannon_over_combined.snap  gauge_avg_bare_memory_total.snap  gauge_avg_over_time.snap  gauge_avg_scaled_memory_total_div_1.snap  gauge_bare_memory_total.snap  gauge_bare_with_labels_target_rate_cachecannon.snap  gauge_bare_with_labels_target_rate_cachecannon_inst0.snap  gauge_bare_with_labels_target_rate_empty_filter.snap  gauge_divide_memory_total_div_queue_depth.snap  gauge_negative.snap  (+34 more)
metriken/src/: counter.rs  gauge.rs  histogram.rs  lazy.rs  lib.rs  sharded.rs
metriken/src/group/: counter.rs  gauge.rs  histogram.rs  metadata.rs  mod.rs
metriken/tests/: dynmetrics.rs
