
[workspace]
resolver = "2"
members = [
    "metriken",
    "metriken-core",
    "metriken-derive",
    "metriken-exposition",
    "metriken-query"
]

[workspace.dependencies]
# Shared across multiple crates
arrow = "58.1.0"
histogram = "1.1.0"
parquet = "58.1.0"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"