
[workspace]
resolver = "2"
members = [
    "metriken",
    "metriken-core",
    "metriken-derive",
    "metriken-exposition",
    "metriken-query"
]

[workspace.dependencies]
# Shared across multiple crates
arrow = "58.1.0"
histogram = { git = "https://github.com/iopsystems/histogram", rev = "e1098c39f8f2fa57522bf401c348d8df775d9051" }
parquet = "58.1.0"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"