[package]
name = "metriken-core"
version = "0.2.0"
edition = "2021"
authors = [
    "Brian Martin <brian@iop.systems>",
    "Sean Lynch <sean@iop.systems>",
]
license = "Apache-2.0"
description = "A fast and lightweight metrics library"
homepage = "https://github.com/pelikan-io/rustcommon"
repository = "https://github.com/pelikan-io/rustcommon"

# Metrics are linked in metriken by using a linkme array.
#
# Having multiple versions of the same array results in a runtime panic so we
# turn that into a compile-time error by using the links directive.
links = "metriken-core"

[dependencies]
histogram = "1.1.0"
linkme = "0.3"
parking_lot = "0.12"
phf = { version = "0.13", features = ["macros"] }
