[package]
name = "metriken-exposition"
version = "0.14.0"
edition = "2021"
authors = [
    "Brian Martin <brian@iop.systems>",
    "Sean Lynch <sean@iop.systems>",
]
license = "MIT OR Apache-2.0"
description = "Exposition for metriken metrics"
homepage = "https://github.com/iopsystems/metriken"
repository = "https://github.com/iopsystems/metriken"

[dependencies]
arrow = { version = "56.1.0", optional = true }
chrono = "0.4.38"
histogram = { path = "../../histogram" }
metriken = { version = "0.8.0", path = "../metriken" }
parquet = { version = "56.1.0", optional = true }
rmp-serde = { version = "1.3.0", optional = true }
serde = { version = "1.0.218", features = ["derive"], optional = true }
serde_json = { version = "1.0.140", optional = true }

[dev-dependencies]
tempfile = "3.17.1"

[features]
default = ["parquet-conversion"]
serde = ["dep:serde", "chrono/serde", "histogram/serde"]
json = ["dep:serde", "dep:serde_json"]
msgpack = ["dep:serde", "dep:rmp-serde"]
parquet = ["dep:arrow", "dep:parquet"]
parquet-conversion = ["serde", "msgpack", "parquet"]
