[package]
name = "metriken-exposition"
version = "0.16.0"
edition = "2021"
authors = [
    "Brian Martin <brian@iop.systems>",
    "Sean Lynch <sean@iop.systems>",
]
license = "MIT OR Apache-2.0"
description = "Exposition for metriken metrics"
homepage = "https://github.com/iopsystems/metriken"
repository = "https://github.com/iopsystems/metriken"

[dependencies]
arrow = { workspace = true, optional = true }
chrono = "0.4.38"
histogram.workspace = true
metriken = { version = "0.9.1", path = "../metriken" }
parquet = { workspace = true, optional = true }
rmp-serde = { version = "1.3.0", optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true

[features]
default = ["parquet-conversion"]
serde = ["dep:serde", "chrono/serde", "histogram/serde"]
json = ["dep:serde", "dep:serde_json"]
msgpack = ["dep:serde", "dep:rmp-serde"]
parquet = ["dep:arrow", "dep:parquet"]
parquet-conversion = ["serde", "msgpack", "parquet"]
