[package]
name = "metriken-query"
version = "0.9.5"
edition = "2021"
authors = [
    "Brian Martin <brian@iop.systems>",
]
license = "MIT OR Apache-2.0"
description = "PromQL query engine and TSDB for metriken parquet files"
homepage = "https://github.com/iopsystems/metriken"
repository = "https://github.com/iopsystems/metriken"

[dependencies]
arrow.workspace = true
bytes = "1"
histogram.workspace = true
metriken-exposition = { version = "0.16.0", path = "../metriken-exposition", default-features = false, optional = true }
parquet = { workspace = true, default-features = false, features = ["arrow", "snap", "brotli", "flate2", "flate2-rust_backened", "zstd"] }
promql-parser = "0.8"
serde.workspace = true
serde_json.workspace = true
thiserror = "2"

# Optional HTTP API dependencies
axum = { version = "0.8", optional = true }

[dev-dependencies]
tempfile.workspace = true

# Used by the memory_compare example to read live-bytes vs resident from the
# allocator's POV — so we can distinguish actual data-structure cost from
# glibc/jemalloc slack.
[target.'cfg(not(any(target_os = "windows", target_env = "msvc")))'.dev-dependencies]
tikv-jemallocator = { version = "0.6", features = ["stats"] }
tikv-jemalloc-ctl = { version = "0.6", features = ["stats"] }

[features]
default = ["ingest", "lz4"]
ingest = ["metriken-exposition"]
lz4 = ["parquet/lz4"]
http = ["axum"]
