[package]
name = "metriken-query"
version = "0.10.2"
edition = "2021"
authors = [
    "Brian Martin <brian@iop.systems>",
    "Yao Yue <yao@iop.systems>",
]
license = "MIT OR Apache-2.0"
description = "PromQL query engine and TSDB for metriken parquet files"
homepage = "https://github.com/iopsystems/metriken"
repository = "https://github.com/iopsystems/metriken"

[dependencies]
arrow.workspace = true
bytes = "1"
histogram.workspace = true
metriken-exposition = { version = "0.16.0", path = "../metriken-exposition", default-features = false, optional = true }
parquet = { workspace = true, default-features = false, features = ["arrow", "snap", "brotli", "flate2", "flate2-rust_backened", "zstd"] }
promql-parser = "0.8"
serde.workspace = true
serde_json.workspace = true
thiserror = "2"
toml = "0.8"

[dev-dependencies]
duckdb = { version = "1.1.1", features = ["bundled"] }
insta = { version = "1", features = ["json"] }
metriken-query-fixtures = { path = "../metriken-query-fixtures" }
metriken-query-sql = { path = "../metriken-query-sql" }
tempfile.workspace = true
toml = "0.8"

[features]
default = ["ingest", "lz4"]
ingest = ["metriken-exposition"]
lz4 = ["parquet/lz4"]
# `http` is a back-compat no-op kept so downstream callers (Rezolus) that
# still request the published 0.9.x's HTTP-routes feature continue to build.
# The actual HTTP routing has moved upstream into the dispatcher's host —
# see `src/dispatch.rs` and `metriken-query-sql::DuckDbBackend`.
http = []
