[package]
name = "metriken"
version = "0.9.1"
edition = "2021"
authors = ["Brian Martin <brian@iop.systems>", "Sean Lynch <sean@iop.systems>"]
license = "Apache-2.0"
description = "A fast and lightweight metrics library"
homepage = "https://github.com/pelikan-io/rustcommon"
repository = "https://github.com/pelikan-io/rustcommon"

[dependencies]
metriken-core   = { version = "0.2.1",  path = "../metriken-core" }
metriken-derive = { version = "=0.5.1", path = "../metriken-derive" }

histogram.workspace = true
once_cell = "1.14.0"
parking_lot.workspace = true

[dev-dependencies]
trybuild = "1.0"
